--- a/Public/upload.html
+++ b/Public/upload.html
@@ -51,7 +51,7 @@
 
           formData.append("file", fileInput.files[0]);
 
-          fetch("http://localhost:5000/upload", {
+          fetch("https://moodle-projeto.nu7ixt.easypanel.host/upload", {
             method: "POST",
             body: formData,
           })
